View und control: 	- 9x9 Button switcht auf SUDOKUImportment

--- a/Sudoku/src/view/SizeChoosement.form
+++ b/Sudoku/src/view/SizeChoosement.form
@@ -65,6 +65,9 @@
         </Property>
         <Property name="text" type="java.lang.String" value="9x9"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="ButtonSize8ActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="ButtonSize16">
       <Properties>
