--- a/Sudoku/src/view/SizeChoosement.form
+++ b/Sudoku/src/view/SizeChoosement.form
@@ -3,7 +3,7 @@
 <Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JPanelFormInfo">
   <Properties>
     <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
-      <Color id="Wait Cursor"/>
+      <Color id="Default Cursor"/>
     </Property>
     <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
       <Font name="Stencil" size="24" style="0"/>
@@ -57,6 +57,9 @@
         </Property>
         <Property name="text" type="java.lang.String" value="4x4"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="ButtonSize4ActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="ButtonSize8">
       <Properties>
@@ -76,6 +79,9 @@
         </Property>
         <Property name="text" type="java.lang.String" value="16x16"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="ButtonSize16ActionPerformed"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
